# TL-AWS-Analytics

./: .dockerignore  .gitignore  .replit  Dockerfile  README.md  app.env.example  docker-compose.yml  main.py  main.sh  packages  pyproject.toml  requirements.txt
.github/workflows/: aws-build-deploy-ec2.yml  aws-build-eb.yml  aws-image.yml  aws-image.yml.disabled  build-deploy-swarm.yml  build-image.yml
app/: main.py  main.sh
app/charts/: bar_chart.py  ctr_list.py  xy_chart.py
app/modules/: MultiPage.py  S3Bucket.py  helper.py  model.py  s3bucket.py
app/pages/: ctr.py  flowusage.py  summary.py  usage.py
app/pages/fragment/: boilerplate.py  custom_button.py  download_button.py  footer.py
app/reports/: call_to_connect.py  count_caller_hangup.py  count_caller_hangups.py  count_calls.py  count_common_array.py  flow_caller_hangup.py  menu_wait_list.py  queue_wait.py  time_to_agent.py
app/reports/ctr_debug/: caller_hangup_list.py  custom_list.py  menu_wait_list.py  queue_wait_list.py
beanstalk/: README.md  docker-compose.yml
config/: Caddyfile  init.sh  oauth.sh  supervisord.conf
config/init/: supervisord.conf
config/oauth/: oauth.sh
config/reverse_proxy/: Caddyfile
deploy/: docker-compose.yml
modules/: MultiPage.py  S3Bucket.py  concurrent_demo.py  helper.py  model.py  report_functions.py
pages/: boilerplate.py  flowusage.py  summary.py
pages/fragment/: boilerplate.py
reports/: count_caller_hangups.py
