[tool.poetry]
name = "selfreliantrubberysoftware"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.5.0"
duckdb = "^0.3.1"
boto3 = "^1.20.49"
numpy = "^1.22.2"
altair = "^4.2.0"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
